First round of color changes, expiremental

--- a/thin.html
+++ b/thin.html
@@ -38,7 +38,7 @@
                   </h2>
                   <hr style="margin: 20px 25px 25px 25px;border-color: #555;">
                   <h3
-                     style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 14px;font-size: 16px;text-align: left;">
+                     style="font-family: 'texgyreadventorbold';color: #49dfe4;margin-bottom: 14px;font-size: 16px;text-align: left;">
                      Free Graphics for Your Meetups and More!
                   </h3>
                   <p style="margin-bottom:10px;text-align: left;">
@@ -50,7 +50,7 @@
                   <p>This resource is a volunteer project from passionate fans, if you'd like to contribute to this effort share your asset to <a href="https://discord.com/channels/356458569069101058/1107742441471234118" target="_blank">the-art-studio</a> channel in our <a href="https://discord.gg/ybmecaTYUN" target="_blank">Discord server</a>, or submit your assets using <a href="https://docs.google.com/forms/d/e/1FAIpQLSePwUaE9yfMIvE1QcSDQiipbn9ye9y99GpGhnfVyjogyU_-0Q/viewform" target="_blank">this submission form</a>. Submissions from the community keeps this project going!</p>
                   <div class="filters">
                      <div class="filter-section">
-                       <h3 style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
+                       <h3 style="font-family: 'texgyreadventorbold';color: #49dfe4;margin-bottom: 10px;font-size: 16px;text-align: left;">
                          Asset Type</h3>
                        <div class="options">
                          <label>
@@ -80,7 +80,7 @@
                        </div>
                      </div>
                      <div class="filter-section">
-                       <h3 style="font-family: 'texgyreadventorbold';color: #e4c049;margin-bottom: 10px;font-size: 16px;text-align: left;">
+                       <h3 style="font-family: 'texgyreadventorbold';color: #49dfe4;margin-bottom: 10px;font-size: 16px;text-align: left;">
                          Year</h3>
                        <div class="options">
                         <label>
