--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,47 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Chansey Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Feb2024CommunityDay" href="#Feb2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Chansey</span></h5>
+                        <p>
+                        It’s the season of <s>Love<s> Chansey! Chansey will be the star of the February community day on the 4th, so get <b> Egg-cited <b> !
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1CVJlVwPbHv48TkjVFw39-3hqyFCF6tKE/view?usp=drive_link" target="_blank">
+                              <img  alt="" src=".assets/2024/Season13-TimelessTravels/2024-02-04-community-day/Chansey_PNG.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1_8DElz4pl8n9qflJ9QEOb5ci9kFLzqSa/view?usp=drive_link" target="_blank">
+                              <img  alt="" src=".assets/2024/Season13-TimelessTravels/2024-02-04-community-day/Background_PNG.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Chansey Community Day -->
                      <!-- Start Landorus Raid Hour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="2024-01-24-raid-hour" href="#2024-01-24-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Landorus (Therian Forme)</span></h5>
