--- a/thin.html
+++ b/thin.html
@@ -133,6 +133,20 @@
                                  </div>
                               </p>
                            </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-02-04-community-day/CChanseyBadge.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-02-04-community-day/CChanseyBadge.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>Cristina's Badge Design</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Designed by <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a> for her own community, and shared with us!
+                                 </div>
+                              </p> 
+                           </div>
                         </div>
                         <hr style="margin:25px;border-color: #555;">
                      </div>
