Strike through correction.html

--- a/thin.html
+++ b/thin.html
@@ -100,7 +100,7 @@
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="Feb2024CommunityDay" href="#Feb2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Chansey</span></h5>
                         <p>
-                        It’s the season of <s>Love<s> Chansey! Chansey will be the star of the February community day on the 4th, so get <b> Egg-cited <b> !
+                        It’s the season of Chansey! Chansey will be the star of the February community day on the 4th, so get <b> Egg-cited <b> !
                         </p>
                         <div class="assetGroup">
                            <div class="asset">
