--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,58 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Heatran Raid Hour -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="2024-02-23-raid-hour" href="#2024-02-23-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Giratina </span></h5>
+                        <p>
+                           A Raid Hour featuring Giratina is scheduled from 6 to 7 pm Local Time. During this hour there will be an increased number of five-star Raids. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-02-23-raid-hour/GiratinaRaidHour.png" target="_blank">
+                              <img  alt="Cresselia in the background, text on the foreground saying CRESSELIA RAID HOUR" src="./assets/2024/Season13-TimelessTravels/2024-02-23-raid-hour/GiratinaRaidHour.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Giratina Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Giratina Raid Hour -->
+                     <!-- Start Heatran Raid Hour -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="2024-02-22-raid-hour" href="#2024-02-22-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Heatran </span></h5>
+                        <p>
+                           A Raid Hour featuring Heatran is scheduled from 6 to 7 pm Local Time. During this hour there will be an increased number of five-star Raids. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-02-22-raid-hour/HeatranRaidHour.png" target="_blank">
+                              <img  alt="Cresselia in the background, text on the foreground saying CRESSELIA RAID HOUR" src="./assets/2024/Season13-TimelessTravels/2024-02-22-raid-hour/HeatranRaidHour.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Heatran Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Heatran Raid Hour -->
                      <!-- Start Mesprit, Azelf, and Uxie Raid Hour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="raidhour20240221" href="#raidhour20240221">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Azelf, Mesprit and Uxie</span></h5>
@@ -152,7 +204,7 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Mesprit, Azelf, and Uxie Raid Hour -->
-                      <!-- Start Cresselia Raid Hour -->
+                     <!-- Start Cresselia Raid Hour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="2024-02-19-raid-hour" href="#2024-02-19-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Cresselia </span></h5>
                         <p>
@@ -273,6 +325,32 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Chansey Community Day -->
+                     <!-- Start Latias Raid Hour -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="2024-01-31-raid-hour" href="#2024-01-31-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Mega Latias </span></h5>
+                        <p>
+                           A Raid Hour featuring Mega Latias is scheduled from 6 to 7 pm Local Time. During this hour there will be an increased number of five-star Raids. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-01-31-raid-hour/LatiasRH.png" target="_blank">
+                              <img  alt="Darkrai in the background, text on the foreground saying DARKRAI RAID HOUR" src="./assets/2024/Season13-TimelessTravels/2024-01-31-raid-hour/LatiasRH.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Mega Latias Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Latias Raid Hour -->
                      <!-- Start Landorus Raid Hour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="2024-01-24-raid-hour" href="#2024-01-24-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Landorus (Therian Forme)</span></h5>
