fixing redirect, addidentally added it to thin

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
       <!-- Main CSS -->
       <link rel="stylesheet" href="style.css">
+      <meta http-equiv="refresh" content="1; URL=https://pogo.community/assets" />
    </head>
    <body>
       <div class="container"
