Go Tour stickers.html

--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,30 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Go Tour -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="2024-02-24-go-tour" href="#2024-02-24-go-tour">Pokémon GO Tour:</a> <span style="font-family:'texgyreadventorregular';">Sinnoh </span></h5>
+                        <p>
+                        Pokémon GO Tour is back this time featuring the Sinnoh region. Gear up for an adventure through space, time, and beyond. Pokémon GO Tour is made up of 3 events, a build up event running from the 15th to the 25th of February, an in-person event happening on the 17th and 18th of February in Los Angeles and finally the Global event on the 24th and 25th of February. Jam packed with new forms, moves and shinies make sure you don’t miss out. Check out the art below and please tag us in your social media posts.                         </p>
+                        <div class="assetGroup">
+                               <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1BQ5cdr704zmUJEiQF-q-D9alSpNM7FHm?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-02-2425-go-tour/sticker_pgo_tour_2024.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label> Pokémon GO Tour Stickers from Pokeminers</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Stickers from PoGo supplied by <a href="https://pokeminers.com/">Pokeminers</a>.
+                                 </div>
+                              </p> 
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Go Tour -->
                      <!-- Start Heatran Raid Hour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="2024-02-23-raid-hour" href="#2024-02-23-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Giratina </span></h5>
