--- a/thin.html
+++ b/thin.html
@@ -96,11 +96,67 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Litten Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Mar2024CommunityDay" href="#Mar2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Litten</span></h5>
+                        <p>
+                        Litten tumbles into the March community day on the 16th of March! 
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1111KJm9XcgdjHJJ5z-n2mQDgrpu9I6nr?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-03-16-community-day/Litten_PNG.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1flLbCW7jTv5e8qfG1OqI1T992Hl4kBME/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-03-16-community-day/Background_PNG.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>      
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Litten Community Day -->
                      <!-- Go Tour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="2024-02-24-go-tour" href="#2024-02-24-go-tour">Pokémon GO Tour:</a> <span style="font-family:'texgyreadventorregular';">Sinnoh </span></h5>
                         <p>
                         Pokémon GO Tour is back this time featuring the Sinnoh region. Gear up for an adventure through space, time, and beyond. Pokémon GO Tour is made up of 3 events, a build up event running from the 15th to the 25th of February, an in-person event happening on the 17th and 18th of February in Los Angeles and finally the Global event on the 24th and 25th of February. Jam packed with new forms, moves and shinies make sure you don’t miss out. Check out the art below and please tag us in your social media posts.                         </p>
+                         <div class="asset">
+                              <a href="https://drive.google.com/file/d/1q31cKAKwToR-KOLbBJazE4cOB8r90rz2/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-02-2425-go-tour/HexBadgeSinnohTour.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
                         <div class="assetGroup">
                                <div class="asset">
                               <a href="https://drive.google.com/drive/folders/1BQ5cdr704zmUJEiQF-q-D9alSpNM7FHm?usp=drive_link" target="_blank">
