--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,155 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Mega Heracross Raid Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Apr2024RaidDay" href="#Apr2024RaidDay">Raid Day:</a> <span style="font-family:'texgyreadventorregular';">Mega Heracross</span></h5>
+                        <p>
+                        Mega Heracross will be featuring on the Raid day on the 13th of April! 
+                        </p>
+                        <div class="assetGroup">
+                               <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-04-13-raid-day/MegaheracrossChristina.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-04-13-raid-day/MegaheracrossChristina.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Mega Heracross Raid Day Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events 
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Mega Heracross Raid Day -->
+                     <!-- Start Bagon Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Apr2024ClassicCommunityDay" href="#Apr2024ClassicCommunityDay">Classic Community Day:</a> <span style="font-family:'texgyreadventorregular';">Bagon</span></h5>
+                        <p>
+                        It will be a smashing classic community day on the 7th of April with Bagon making a community day return! 
+                        </p>
+                        <div class="assetGroup">
+                               <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-04-07-community-dy-classic/BagonChristina.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-04-07-community-dy-classic/BagonChristina.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Bagon Classic Community Day Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events 
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Bagon Community Day -->
+                     <!-- Start April Raid Hours -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="Apr2024RaidHours" href="#Apr2024RaidHours">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">April Raid Hours </span></h5>
+                        <p>
+                           A Raid Hour featuring Legendary Pokémon/Mythical Pokémon/Ultra Beast is scheduled from 6 to 7 pm Local Time every week. During this hour there will be an increased number of featured Raids. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-04-03-raid-hour/LeleRaidhour.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-04-03-raid-hour/LeleRaidhour.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Tapu Lele Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 3rd of April
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-04-10-raid-hour/KartanaRaidhour.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-04-10-raid-hour/KartanaRaidhour.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Kartana Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 10th of April
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-04-10-raid-hour/CelesteelaRaidhour.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-04-10-raid-hour/CelesteelaRaidhour.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Celesteela Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 10th of April
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-04-17-raid-hour/TapuBuluRaidhour.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-04-17-raid-hour/TapuBuluRaidhour.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Tapu Bulu Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 17th and 24th of April
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End April Raid Hours -->
+                     <!-- Start Shadow Mewtwo Shadow Raids  -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="Mar2024ShadowRaids" href="#Mar2024ShadowRaids">Shadow Raids:</a> <span style="font-family:'texgyreadventorregular';">Mewtwo </span></h5>
+                        <p>
+                        Shadow Mewtwo will be making a much anticipated return to Shadow raids during the World of Wonders: Taken Over event on the 30th and 31st of March. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-02-23-raid-hour/2024-03-30-shadow-raids/ShadowMewtwoChristina.png" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-03-30-shadow-raids/ShadowMewtwoChristina.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Shadow Mewtwo Raid Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Start Shadow Mewtwo Shadow Raids -->
                      <!-- Start Litten Community Day -->
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="Mar2024CommunityDay" href="#Mar2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Litten</span></h5>
@@ -176,7 +325,7 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Go Tour -->
-                     <!-- Start Heatran Raid Hour -->
+                     <!-- Start Giratina Raid Hour -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
                         <h5><a class="page-anchor" id="2024-02-23-raid-hour" href="#2024-02-23-raid-hour">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">Giratina </span></h5>
                         <p>
