Bagon html and go tour image removal.html
Go tour image to be replaced with smaller version in future

--- a/thin.html
+++ b/thin.html
@@ -129,6 +129,36 @@
                         It will be a smashing classic community day on the 7th of April with Bagon making a community day return! 
                         </p>
                         <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/1AFcw0dXfqvx0C65phCITPz5APVLH9mli?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-04-07-community-dy-classic/Bagon-Badge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1j8sSTGZVjVigHy0hh2dQ67RP_LXXnrvA/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-04-07-community-dy-classic/Bagon-Background.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div> 
                                <div class="asset">
                               <a href="./assets/2024/Season13-TimelessTravels/2024-04-07-community-dy-classic/BagonChristina.jpg" target="_blank">
                               <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-04-07-community-dy-classic/BagonChristina.jpg">
@@ -293,7 +323,7 @@
                         Pokémon GO Tour is back this time featuring the Sinnoh region. Gear up for an adventure through space, time, and beyond. Pokémon GO Tour is made up of 3 events, a build up event running from the 15th to the 25th of February, an in-person event happening on the 17th and 18th of February in Los Angeles and finally the Global event on the 24th and 25th of February. Jam packed with new forms, moves and shinies make sure you don’t miss out. Check out the art below and please tag us in your social media posts.                         </p>
                          <div class="asset">
                               <a href="https://drive.google.com/file/d/1q31cKAKwToR-KOLbBJazE4cOB8r90rz2/view?usp=drive_link" target="_blank">
-                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-02-2425-go-tour/HexBadgeSinnohTour.png">
+                              <img  alt="" src="">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
