--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,47 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Belsprout Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Apr2024CommunityDay" href="#Apr2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Bellsprout</span></h5>
+                        <p>
+                        Bellsprout is springing into the community day on the 20th of April! 
+                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/19DIHRaOLwrtqBhH1M0yF45FBxtWR2nBF?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2023-04-20-Community-day/Bellsprout_png.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1MrBW1mS6PGbljN6VunyXcuJViGV1pjsD/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2023-04-20-Community-day/Bellsproutbackground_png.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div> 
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Belsprout Community Day -->
                      <!-- Start Mega Heracross Raid Day -->
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="Apr2024RaidDay" href="#Apr2024RaidDay">Raid Day:</a> <span style="font-family:'texgyreadventorregular';">Mega Heracross</span></h5>
