June updates.html

--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,226 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start July Raid Hours -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="Jul2024RaidHours" href="#Jul2024RaidHours">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">July Raid Hours </span></h5>
+                        <p>
+                           A Raid Hour featuring Legendary Pokémon/Mythical Pokémon/Ultra Beast is scheduled from 6 to 7 pm Local Time every week. During this hour there will be an increased number of featured Raids. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-07-03-Hooh.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-07-03-Hooh.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Ho-Oh Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 3rd of July
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End July Raid Hours -->
+                     <!-- Start Mega Rayquaza Elite Raids -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="mega-rayquaza-elite-raids" href="#mega-rayquaza-elite-raids">Elite Raids:</a> <span style="font-family:'texgyreadventorregular';">Mega Rayquaza</span></h5>
+                        <p>
+                           Mega Rayquaza will feature in Elite Raids on the 29th of June at 12:00pm, 01:00pm, 05:00pm and 06:00pm. Check out <a href="https://leekduck.com/events/elite-raid-mega-rayquaza-june/">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2023-06-29-elite-raids/2024-06-29-MegaRayquaza.jpg" target="_blank">
+                              <img  alt="Mega Rayquaza in the background, text on the foreground saying Mega Rayquaza Elite Raids" src="./assets/2024/Season13-TimelessTravels/2023-06-29-elite-raids/2024-06-29-MegaRayquaza.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Mega Rayquaza Elite Raid Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Mega Rayquaza Elite Raids -->
+                     <!-- Start Cyndaquil Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Jun2024ClassicCommunityDay" href="#Jun2024ClassicCommunityDay">Classic Community Day:</a> <span style="font-family:'texgyreadventorregular';">Cyndaquil</span></h5>
+                        <p>
+                        Cyndaquil makes it's return during the June Classic Community day on the 22nd!  
+                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/11x24wvnr-UmxGZazN8x_TsUz6xPGFc9Y?usp=sharing" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-06-22-community-day-classic/cyndaquil_badge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1N00Qr0oZPPpBbepQOUk87nEwpi_fInLi/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-06-22-community-day-classic/cyndaquil_background.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div> 
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-06-22-community-day-classic/cyndaquil_cristina.png" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-06-22-community-day-classic/cyndaquil_cristina.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Cyndaquil Community Day Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events 
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Cyndaquil Community Day -->
+                     <!-- Start Goomy Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Jun2024CommunityDay" href="#Jun2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Goomy</span></h5>
+                        <p>
+                        Goomy and it's evolution Goodra, the Soft Tissue Pokémon, will be featured during June Community Day on the 9th! 
+                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/120NRhIg36vtyYjuUHSmK-PX3Ts-Gz941?usp=sharing" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-06-09-community-day/goomy_badge.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1t3opHawOkoVbfT30u-5cjvK6yXCzvJES/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-06-09-community-day/goomy_background.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div> 
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-06-09-community-day/GoomyCristina.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-06-09-community-day/GoomyCristina.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Goomy Community Day Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events 
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Goomy Community Day -->
+                     <!-- Start June Raid Hours -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="Jun2024RaidHours" href="#Jun2024RaidHours">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">June Raid Hours </span></h5>
+                        <p>
+                           A Raid Hour featuring Legendary Pokémon/Mythical Pokémon/Ultra Beast is scheduled from 6 to 7 pm Local Time every week. During this hour there will be an increased number of featured Raids. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-06-05-Zapdos.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-06-05-Zapdos.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Zapdos Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 5th of June
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-06-12-Landorus.png" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-06-12-Landorus.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Landorus Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 12th of June
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-06-19-Yveltal.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-06-raid-hours/2024-06-19-Yveltal.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Yveltal Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 19th and 26th of June
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End June Raid Hours -->
                      <!-- Start Bounsweet Community Day -->
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="May2024CommunityDay" href="#May2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Bounsweet</span></h5>
